# vital

./: CMakeLists.txt  README.md
CMake/: kwiver-configcheck.cmake  kwiver-install-utils.cmake  setup_VITAL.sh.in  vital-config.cmake.in  vital-test-setup.cmake
CMake/configcheck/: demangle_abi.cxx  std_map_unique_ptr.cxx
CMake/utils/: kwiver-utils-targets.cmake
doc/release-notes/: 0.2.0.txt  afrl_pending_release_since_0.1.0.txt
vital/: CMakeLists.txt  algorithm_plugin_manager.cxx  any.h  exceptions.h  registrar.h  video_metadata.cxx  video_metadata.h  vital_config.h.in
vital/algo/: algorithm.h  algorithm.txx  video_input.cxx  video_input.h
vital/bindings/: CMakeLists.txt
vital/bindings/c/: CMakeLists.txt  algorithm.cxx  algorithm.h  algorithm_plugin_manager.cxx  algorithm_plugin_manager.h  camera_intrinsics.cxx  camera_intrinsics.h  config_block.cxx  config_block.h  eigen.cxx  eigen.h  error_handle.h  track_set.h
vital/bindings/python/: Kwiver_Python_Demo.ipynb  run_tests.sh
vital/config/: config_block.h  config_parser.cxx
vital/config/doc/: config_file_format.md.dox
vital/config/tests/: CMakeLists.txt
vital/exceptions/: base.cxx  base.h  image.h  klv.h  video.cxx  video.h
vital/klv/: CMakeLists.txt  klv_0104.cxx  klv_0104.h  klv_0601.cxx  klv_0601.h  klv_0601_traits.h  klv_data.cxx  klv_data.h  klv_key.cxx  klv_key.h  klv_parse.cxx  klv_parse.h
vital/klv/tests/: CMakeLists.txt
vital/logger/: CMakeLists.txt
vital/plugin_loader/: plugin_config_util.cxx  plugin_config_util.h  plugin_factory.cxx  plugin_factory.h  plugin_manager.cxx  plugin_manager.h
vital/tests/: CMakeLists.txt  test_camera_io.cxx
vital/toolkits/klv/: CMakeLists.txt  (+11 more)
vital/tools/: CMakeLists.txt  config_explorer.cxx  dump_klv.cxx
vital/types/: camera.cxx  covariance.h  geo_corner_points.h  geo_lat_lon.cxx  geo_lat_lon.h  image.h  rotation.h  video_metadata.h
vital/util/: any_converter.h  demangle.cxx  whereami.c
vital/video_metadata/: CMakeLists.txt  convert_0104_metadata.cxx  convert_0601_metadata.cxx  convert_metadata.cxx  convert_metadata.h  video_metadata.cxx  video_metadata.h  video_metadata_tags.h  video_metadata_traits.cxx  video_metadata_traits.h
(+72 files in other folders)
